--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Company Confidential</p>
 				</div>
 				<div class="col">
-					<img src="assets/exclam_prestonwho.svg" height=64 alt="Company Logo">
+					<img src="assets/exclam_prestonwho.svg" height="5" width="5" alt="Company Logo">
 				</div>
 			</div>
 		</div>
