--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<title>Preston Wilson</title>
-	<link rel="stylesheet" href="/assets/main.css">
+	<link rel="stylesheet" href="./assets/main.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:200,300,400,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Muli:200,300" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
