--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Preston D. Wilson</p>
+					<p class="text-name">Preston Wilson</p>
 					<p class="text-title-company">Hosting Orchestration Engineer</p>
 					<p class="text-title-company">Company Confidential</p>
 				</div>
