--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<section class="bg-color-hero banner">
 		<div class="container">
 			<div class="row">
-				<div class="col">
+				<div id="share-button" class="col">
 					<img id="profile-pic" class="profile-pic" src="./assets/profile_photo.png" alt="Profile Picture" style="display: block;">
 					<img id="qr-code" class="qr-code" src="./assets/1639102990306.jpg" alt="QR Code" style="display: none;">
 				</div>
