--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					<img id="profile-pic" class="profile-pic" src="./assets/profile_photo.png" alt="Profile Picture" style="display: block;">
 					<img id="qr-code" class="qr-code" src="./assets/1639102990306.jpg" alt="QR Code" style="display: none;">
 				</div>
-				<div class="col">
+				<!-- <div class="col">
 					<a id="share-button" class="share-button"><img src="./assets/icon-qr.svg">QR</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
