--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col horizontal-center-child">
-					<a href="assets/user.vcf">
+					<a href="assets/preston.vcf">
 						<button class="button">
 							Save Contact
 						</button>
