removed venmo.ico added icon-venmo.ico updated index.html

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 					</a>
 				</div>
 				
-				<!-- ><div class="col is-2">
-					<a href="https://medium.com/@prestonlim">
-						<img src="./assets/icon-medium.svg">
+				<div class="col is-2">
+					<a href="https://venmo.com/u/thatpreston">
+						<img src="./assets/icon-venmo.ico">
 					</a>
-				</div> -->
+				</div>
 			</div>
 		</div>
 	</section>
